# synth-for-web-assembly

./: CMakeLists.txt  main.cpp
